lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:1: error: type mismatch;
 found   : java.util.List[lessons.lander.universe.Point]
 required: lessons.lander.universe.Segment
getSol();
      ^